--- a/src/pages/index.module.css
+++ b/src/pages/index.module.css
@@ -31,3 +31,12 @@
   width: 65px;
   height: 65px;
 }
+
+.candidate {
+  width: 80px;
+  height: 80px;
+  border: 1px solid black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
